// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. 360 video 1`] = `
<div>
  <div>
    <div>
      <IconVideo360Player
        fillColour="#FFFFFF"
        height={100}
      />
    </div>
    <video
      poster="c7dd06ff1063ae467c3a3be00c6caeca"
    />
  </div>
</div>
`;

exports[`2. player icon for 360 video not displayed after play 1`] = `
<div>
  <div>
    <video
      poster="c7dd06ff1063ae467c3a3be00c6caeca"
    />
  </div>
</div>
`;
